Property names of the built-in object cannot be retrieved after trying to delete one of its properties https://bugs.webkit.org/show_bug.cgi?id=86461

Patch by Hojong Han <hojong.han@samsung.com> on 2012-06-12
Reviewed by Gavin Barraclough.

Source/JavaScriptCore:

* runtime/JSObject.cpp:
(JSC::getClassPropertyNames):
(JSC::JSObject::getOwnPropertyNames):

LayoutTests:

* fast/js/delete-syntax-expected.txt:
* fast/js/script-tests/delete-syntax.js:

Canonical link: https://commits.webkit.org/106678@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@120045 268f45cc-cd09-0410-ab3c-d52691b4dbfc